crates/cyrs-fmt/src/snapshots/cyrs_fmt__corpus__snap_expr_not_in_list.snap
---
source: crates/cyrs-fmt/src/lib.rs
expression: "fmt(\"MATCH (n) WHERE NOT n.status IN ['deleted', 'banned'] RETURN n\")"
---
MATCH (n)
WHERE NOT n.status IN ['deleted', 'banned']
RETURN n
