crates/cyrs-fmt/src/snapshots/cyrs_fmt__corpus__snap_expr_string_concat.snap
---
source: crates/cyrs-fmt/src/lib.rs
expression: "fmt(\"MATCH (n:Person) RETURN n.firstName + ' ' + n.lastName AS fullName\")"
---
MATCH (n:Person)
RETURN n.firstName + ' ' + n.lastName AS fullName
