crates/cyrs-fmt/src/snapshots/cyrs_fmt__corpus__snap_fmt_off_preserves_badly_formatted.snap
---
source: crates/cyrs-fmt/src/lib.rs
expression: "fmt(\"MATCH (n) RETURN n;\\n// cypher-fmt: off\\nmatch(n:Person{name:'Alice'})return n.name\\n// cypher-fmt: on\\nMATCH (m) RETURN m\")"
---
MATCH (n)
RETURN n;
// cypher-fmt: off
match(n:Person{name:'Alice'})return n.name
// cypher-fmt: on
MATCH (m)
RETURN m
