crates/cyrs-fmt/src/snapshots/cyrs_fmt__corpus__snap_match_where_with_match_return.snap
---
source: crates/cyrs-fmt/src/lib.rs
expression: "fmt(\"MATCH (n:Person) WHERE n.active = true WITH n MATCH (n)-[r:KNOWS]->(m) RETURN n, m\")"
---
MATCH (n:Person)
WHERE n.active = TRUE
WITH n
MATCH (n)-[r:KNOWS]->(m)
RETURN n, m
