crates/cyrs-fmt/src/snapshots/cyrs_fmt__corpus__snap_merge_node.snap
---
source: crates/cyrs-fmt/src/lib.rs
expression: "fmt(\"MERGE (n:Person {name: 'Alice'})\")"
---
MERGE (n:Person {name: 'Alice'})
