crates/cyrs-fmt/src/snapshots/cyrs_fmt__corpus__snap_pipeline_with_skip_limit.snap
---
source: crates/cyrs-fmt/src/lib.rs
expression: "fmt(\"MATCH (n:Movie) WITH n ORDER BY n.year DESC SKIP 5 LIMIT 10 RETURN n.title, n.year\")"
---
MATCH (n:Movie)
WITH n
ORDER BY n.year DESC
SKIP 5
LIMIT 10
RETURN n.title, n.year
