crates/cyrs-fmt/src/snapshots/cyrs_fmt__corpus__snap_remove_property.snap
---
source: crates/cyrs-fmt/src/lib.rs
expression: "fmt(\"MATCH (n:Person {name: 'Alice'}) REMOVE n.age RETURN n\")"
---
MATCH (n:Person {name: 'Alice'})
REMOVE n.age
RETURN n
